Fix register form being cut off

--- a/client/src/styles/components/_button.scss
+++ b/client/src/styles/components/_button.scss
@@ -6,7 +6,8 @@
   cursor: pointer;
   font-size: 1.8rem;
   height: 4.4rem;
-  width: 9.4rem;
+  width: 10rem;
+  text-align: center;
   transition: all 0.2s ease;
 
   &:hover {
